// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comment-whitespace-inside не ошибки индекс теста: 0 1`] = `Array []`;

exports[`comment-whitespace-inside ошибки индекс теста: 0 1`] = `
Array [
  Object {
    "column": 3,
    "endColumn": 4,
    "endLine": 1,
    "line": 1,
    "rule": "comment-whitespace-inside",
    "severity": "error",
    "text": "Expected whitespace after \\"/*\\" (comment-whitespace-inside)",
  },
  Object {
    "column": 9,
    "endColumn": 10,
    "endLine": 1,
    "line": 1,
    "rule": "comment-whitespace-inside",
    "severity": "error",
    "text": "Expected whitespace before \\"*/\\" (comment-whitespace-inside)",
  },
]
`;

exports[`comment-whitespace-inside ошибки индекс теста: 1 1`] = `
Array [
  Object {
    "column": 10,
    "endColumn": 11,
    "endLine": 1,
    "line": 1,
    "rule": "comment-whitespace-inside",
    "severity": "error",
    "text": "Expected whitespace before \\"*/\\" (comment-whitespace-inside)",
  },
]
`;

exports[`comment-whitespace-inside ошибки индекс теста: 2 1`] = `
Array [
  Object {
    "column": 3,
    "endColumn": 4,
    "endLine": 1,
    "line": 1,
    "rule": "comment-whitespace-inside",
    "severity": "error",
    "text": "Expected whitespace after \\"/*\\" (comment-whitespace-inside)",
  },
]
`;
